updating our details

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
 
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a career Culinarian working in the midst of this pandemic to change my career to something more stable if and or when something like this happens again.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I grew up in Lebanon Ohio but I am currently in Loveland Ohio</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I'm a father of three so my hobbies are my family. If i happen to have time to do anything else then I usually spend that time with some friends or recording my podcasts. </p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is anything that allows me to have a positive impact on the world. I would love to work with Ashton Kutcher on his task force to remove Pedophilia from the internet.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in the Loveland Milford area of Ohio</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I have always been interested in doing something in the technology field and this gives me the foundation needed to do so.</p>
     </section>
 
     <footer id="footer">
